--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World new change in the index file to do the change<h1>
+    <h1>Hello World <h1>
 </body>
 </html>
 
